[gd_scene load_steps=11 format=3 uid="uid://ddjx8w1j80w1t"]

[ext_resource type="Texture2D" uid="uid://b8wgwndny30y8" path="res://Graphics/Sprites/Hazards/sprSpikeBlock.png" id="1_l11mg"]
[ext_resource type="Script" path="res://Scripts/Hazards/scrSpikeBlock.gd" id="1_y4liw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xi4bt"]
atlas = ExtResource("1_l11mg")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5da7"]
atlas = ExtResource("1_l11mg")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_guiqu"]
atlas = ExtResource("1_l11mg")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mru6j"]
atlas = ExtResource("1_l11mg")
region = Rect2(120, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_4p3wj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi4bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5da7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guiqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mru6j")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0coj"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ita0j"]
size = Vector2(34, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67auf"]
size = Vector2(40, 40)

[node name="objSpikeBlock" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_y4liw")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-4, -4)
sprite_frames = SubResource("SpriteFrames_4p3wj")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_g0coj")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_ita0j")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="KillArea" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_67auf")
debug_color = Color(1, 0.00784314, 0.0509804, 0.419608)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
